@@ -12,6 +12,7 @@ munin (CVS)
   * Plugins: Added warning note in linux/if_ output.
   * Plugins: generic/smart_ exit value no longer triggers criticals.
   * Plugins: linux/df* now ignores bind mounts.
+  * Plugins: Added plugin generic/snmp__cpuload.
   * Docs: Added man page for munin-node-configure-snmp.
   * Docs: Brushed up the comments in the default munin.conf a bit (Deb#294060).
   * Installation: Create CIGdir if nonexistant.
